--- a/templates/tasks/Readtask.html.twig
+++ b/templates/tasks/Readtask.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello TasksController!{% endblock %}
+{% block title %}TasksController!{% endblock %}
 
 {% block body %}
 
